# vaexcore-studio

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  styles.css  vaexcore-theme.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  suite_protocol.rs
crates/vaexcore-api/: Cargo.toml
crates/vaexcore-api/src/: auth.rs  client_registry.rs  event_bus.rs  lib.rs  store.rs
crates/vaexcore-core/: Cargo.toml
crates/vaexcore-core/src/: audio.rs  capture.rs  compositor.rs  events.rs  lib.rs  output.rs  performance.rs  pipeline.rs  profiles.rs  responses.rs  runtime.rs  scenes.rs  security.rs  settings.rs  status.rs
crates/vaexcore-media/: Cargo.toml
crates/vaexcore-media/src/: lib.rs  sidecar.rs
crates/vaexcore-platforms/: Cargo.toml
crates/vaexcore-platforms/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CONNECTED_APPS.md  ICON_SYSTEM.md  MEDIA_ENGINE.md  RELEASE.md  ROADMAP.md  SCENE_EDITOR_SEQUENCE.md  STUDIO_DESIGNER_SHORTCUTS.md  SUITE_PROTOCOL.md  WINDOWS.md  WINDOWS_VALIDATION.md
scripts/: check-sidecars.mjs  designer-soak.mjs  prepare-sidecars.mjs  prepare-sidecars.sh  release-check.sh  validate-windows.mjs  visual-smoke.mjs
scripts/lib/: sidecars.mjs
scripts/tests/: scene-model.test.mjs  sidecars.test.mjs
sidecars/media-runner/: Cargo.toml
sidecars/media-runner/src/: main.rs
tools/windows-launchers/: Launch-VaexcoreApp.ps1  README.md
