[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/vaexcore-api",
  "crates/vaexcore-core",
  "crates/vaexcore-media",
  "crates/vaexcore-platforms",
  "sidecars/media-runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jmars319/vaexcore-studio"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["json", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
security-framework = "3.6.0"
tauri = "2.11.0"
tauri-build = "2.6.0"
tauri-plugin-dialog = "2.7.1"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.52.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
windows-sys = "0.61"
