[package]
name = "vaexcore-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
directories.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
vaexcore-core = { path = "../vaexcore-core" }
vaexcore-media = { path = "../vaexcore-media" }
vaexcore-platforms = { path = "../vaexcore-platforms" }

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
