[package]
name = "vaexcore-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ab_glyph.workspace = true
base64.workspace = true
chrono.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tungstenite.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
