[package]
name = "vaexcore-media"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["dry-run"]
dry-run = []
gstreamer = []

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
vaexcore-core = { path = "../vaexcore-core" }

