[package]
name = "vaexcore-studio-desktop"
version = "0.1.0"
description = "macOS-first desktop control system for vaexcore studio."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vaexcore_studio_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vaexcore-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
tauri.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vaexcore-api = { path = "../../../crates/vaexcore-api" }
vaexcore-core = { path = "../../../crates/vaexcore-core" }
vaexcore-media = { path = "../../../crates/vaexcore-media" }
