[package]
name = "vaexcore-studio"
version = "0.1.0"
description = "macOS-first desktop control system for vaexcore studio."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vaexcore_studio"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vaexcore-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vaexcore-api = { path = "../../../crates/vaexcore-api" }
vaexcore-core = { path = "../../../crates/vaexcore-core" }
vaexcore-media = { path = "../../../crates/vaexcore-media" }
